<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="my_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <string name="movie_title">Movie Title</string>
    <string name="movie_overview">OverView</string>

    <!-- GridView of Movie -->
    <string name="sort_by_popularity">Sort by Popularity</string>
    <string name="sort_by_rating">Sort by Rating</string>

    <!-- Movie Defaults -->
    <string name="search_artist_hint">Search Artist</string>
    <string name="no_trailer_found">No trailer(s) found</string>
    <string name="no_movie_found">No movies(s) found</string>

    <string name="search_movie">Search Movie.</string>

    <string name="error">Error</string>
    <string name="null_error">Something went wrong. Please try again.</string>

    <string name="movie_name">Movie name</string>
    <string name="year">Year</string>

    <!-- Dashboard -->
    <string name="popular_movies">Popular Movies</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="bacon_rader">BACON APP</string>
    <string name="capstone_my_own_app">CAPSTONE: MY OWN APP</string>
    <string name="title_activity_movie">Movies</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>

    <!-- Movie Details Activity -->
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>

</resources>
